--- a/.gitmodules
+++ b/.gitmodules
@@ -1,10 +1,9 @@
-[submodule "Deps/gtm-session-fetcher"]
-	path = Deps/gtm-session-fetcher
-	url = git@github.com:google/gtm-session-fetcher.git
-	branch = master
-[submodule "Deps/GTMAppAuth"]
-	path = Deps/GTMAppAuth
-	url = git@github.com:google/GTMAppAuth.git
 [submodule "Deps/AppAuthFork"]
 	path = Deps/AppAuthFork
 	url = git@github.com:doo/AppAuth-iOS.git
+[submodule "Deps/gtm-session-fetcher"]
+	path = Deps/gtm-session-fetcher
+	url = git@github.com:doo/gtm-session-fetcher.git
+[submodule "Deps/GTMAppAuth"]
+	path = Deps/GTMAppAuth
+	url = git@github.com:doo/GTMAppAuth.git
